--- a/django/MovieApp/movies/templates/index.html
+++ b/django/MovieApp/movies/templates/index.html
@@ -1,21 +1,43 @@
 {% load static %}
 
-<h1>Home Page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    
+    {% include 'partials/_navbar.html' %}
 
-<ul>
-    {% for k in Kategori %}
-        <li>{{ k }}</li>
-    {% endfor %}
-</ul>
-
-<div id="Film">
-    {% for f in Film %}
-        {% if f.anasayfa %}
-            <div>
-                <p>{{ f.film_adi }}</p>
-                <p>{{ f.aciklama }}</p>
-                <img src="{% static 'img/'|add:f.resim %}" alt="">
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-3">
+                <div class="list-group">
+                    {% for k in Kategori %}
+                        <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                            {{ k }}
+                        </a>
+                    {% endfor %}
+                  </div>
             </div>
-        {% endif %}
-    {% endfor %}
-</div>
+            <div class="col-9">
+                <div class="row">
+                    {% for f in Film %}
+                        {% if f.anasayfa %}
+                            <div class="col-4">
+                                {% include 'partials/_movie.html' %}
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                    <div class="col-8"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
