--- a/django/MovieApp/movies/templates/movies.html
+++ b/django/MovieApp/movies/templates/movies.html
@@ -19,7 +19,7 @@
                 <div class="list-group">
                     {% for k in Kategori %}
                         <a href="#" class="list-group-item list-group-item-action" aria-current="true">
-                            {{ k }}
+                            {{ k.name }}
                         </a>
                     {% endfor %}
                   </div>
