--- a/django/MovieApp/movies/templates/partials/_navbar.html
+++ b/django/MovieApp/movies/templates/partials/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #A2A2BB;">
+<nav class="navbar navbar-expand-lg" style="background-color: #b3cccc;">
   <div class="container">
     <a class="navbar-brand fs-3" href="{% url 'home' %}">-PLEASURE-</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
